Add more dialog for simulator

--- a/MyThesis/MyThesis/MyThesis.csproj
+++ b/MyThesis/MyThesis/MyThesis.csproj
@@ -197,7 +197,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ShipController.cs" />
+    <Compile Include="Controllers\ShipLocationController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\WarningLocationController.cs" />
     <Compile Include="DAL\ThesisContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
