--- a/MyThesis/MyThesis/Server.csproj
+++ b/MyThesis/MyThesis/Server.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ShipController.cs" />
     <Compile Include="Controllers\ShipLocationController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -212,6 +213,10 @@
     <Compile Include="Migrations\201511161425487_Init context.Designer.cs">
       <DependentUpon>201511161425487_Init context.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511251501076_add_user.cs" />
+    <Compile Include="Migrations\201511251501076_add_user.Designer.cs">
+      <DependentUpon>201511251501076_add_user.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -223,6 +228,8 @@
     <Compile Include="Models\Ship\Ship.cs" />
     <Compile Include="Models\Ship\ShipStatus.cs" />
     <Compile Include="Models\Ship\ShipType.cs" />
+    <Compile Include="Models\User\User.cs" />
+    <Compile Include="Models\User\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -289,6 +296,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201511161425487_Init context.resx">
       <DependentUpon>201511161425487_Init context.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511251501076_add_user.resx">
+      <DependentUpon>201511251501076_add_user.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
