--- a/MyThesis/Monitor/app/bower.json
+++ b/MyThesis/Monitor/app/bower.json
@@ -14,6 +14,7 @@
     "toastr": "~2.1.2",
     "angular-modal-service": "~0.6.9",
     "Ionicons": "ionicons#~2.0.1",
-    "mapbox.js": "~2.2.3"
+    "mapbox.js": "~2.2.3",
+    "Leaflet.Coordinates": "~0.1.5"
   }
 }
