--- a/MyThesis/packages/repositories.config
+++ b/MyThesis/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\ApiServer\packages.config" />
+  <repository path="..\DownloadFile\packages.config" />
   <repository path="..\ServerApi\packages.config" />
 </repositories>
