display warning message for ship and international ship

--- a/MyThesis/Monitor/app/bower.json
+++ b/MyThesis/Monitor/app/bower.json
@@ -18,6 +18,7 @@
     "Leaflet.Coordinates": "~0.1.5",
     "leaflet-providers": "~1.1.6",
     "leaflet-search": "~1.8.4",
-    "leaflet-groupedlayercontrol": "~0.4.0"
+    "leaflet-groupedlayercontrol": "~0.4.0",
+    "angular-sanitize": "~1.4.8"
   }
 }
