--- a/MyThesis/Simulator/Simulator.csproj
+++ b/MyThesis/Simulator/Simulator.csproj
@@ -68,6 +68,9 @@
     <Content Include="app\src\createShipDialog\create-ship-dialog.html" />
     <Content Include="app\src\createShipDialog\createShipDialogCtrl.js" />
     <Content Include="app\src\createShipDialog\createShipDialogSvc.js" />
+    <Content Include="app\src\createStormDialog\create-storm-dialog.html" />
+    <Content Include="app\src\createStormDialog\createStormDialogCtrl.js" />
+    <Content Include="app\src\createStormDialog\createStormDialogDataSvc.js" />
     <Content Include="app\src\createWarningLocationDialog\create-warning-location-dialog.html" />
     <Content Include="app\src\createWarningLocationDialog\createWarningLocationDialogCtrl.js" />
     <Content Include="app\src\createWarningLocationDialog\createWarningLocationDialogDataSvc.js" />
