--- a/MyThesis/Monitor/Monitor.csproj
+++ b/MyThesis/Monitor/Monitor.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\assets\css\common.css" />
+    <Content Include="app\assets\css\main.css" />
+    <Content Include="app\assets\css\login-page.css" />
     <Content Include="app\assets\img\ship-marker\black.png" />
     <Content Include="app\assets\img\ship-marker\blue.png" />
     <Content Include="app\assets\img\ship-marker\green.png" />
@@ -111,9 +113,6 @@
     <Content Include="app\src\signUpPage\signUpPageSvc.js" />
     <Content Include="app\src\user\userDataSvc.js" />
     <Content Include="package.json" />
-    <Content Include="app\assets\lumio\font\glyphicons-halflings-regular.eot" />
-    <Content Include="app\assets\lumio\font\glyphicons-halflings-regular.ttf" />
-    <Content Include="app\assets\lumio\font\glyphicons-halflings-regular.woff" />
     <Content Include="app\bower.json" />
     <Content Include="app\assets\script\leaflet-openweathermap\README.md" />
     <Content Include="app\assets\script\LeafletStyledLayerControl\css\fonts\Alegreya-Black.ttf" />
@@ -142,11 +141,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\assets\css\styles.css" />
-    <Content Include="app\assets\lumio\css\styles.css" />
-    <Content Include="app\assets\lumio\font\glyphicons-halflings-regular.svg" />
-    <Content Include="app\assets\lumio\js\html5shiv.min.js" />
-    <Content Include="app\assets\lumio\js\lumino.glyphs.js" />
-    <Content Include="app\assets\lumio\js\respond.min.js" />
     <Content Include="app\indexCtrl.js" />
     <Content Include="app\index.html" />
     <Content Include="app\src\app.const.js" />
