--- a/MyThesis/ApiServer/ApiServer.csproj
+++ b/MyThesis/ApiServer/ApiServer.csproj
@@ -49,6 +49,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Device" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -93,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\GenerateLocationController.cs" />
     <Compile Include="Controllers\ShipApisController.cs" />
     <Compile Include="Controllers\ShipController.cs" />
     <Compile Include="Controllers\ShipLocationController.cs" />
@@ -120,6 +122,26 @@
     <Compile Include="Migrations\201512291438425_initShips.Designer.cs">
       <DependentUpon>201512291438425_initShips.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512301357020_createDb.cs" />
+    <Compile Include="Migrations\201512301357020_createDb.Designer.cs">
+      <DependentUpon>201512301357020_createDb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512301402426_createDb1.cs" />
+    <Compile Include="Migrations\201512301402426_createDb1.Designer.cs">
+      <DependentUpon>201512301402426_createDb1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512301407550_createDb2.cs" />
+    <Compile Include="Migrations\201512301407550_createDb2.Designer.cs">
+      <DependentUpon>201512301407550_createDb2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512301413437_createDb3.cs" />
+    <Compile Include="Migrations\201512301413437_createDb3.Designer.cs">
+      <DependentUpon>201512301413437_createDb3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512301416310_GenerateLocations.cs" />
+    <Compile Include="Migrations\201512301416310_GenerateLocations.Designer.cs">
+      <DependentUpon>201512301416310_GenerateLocations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Location\Location.cs" />
     <Compile Include="Models\Location\ShipLocation.cs" />
@@ -134,7 +156,9 @@
     <Compile Include="Models\User\User.cs" />
     <Compile Include="Models\User\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GenerateShipLocationService.cs" />
     <Compile Include="Services\InternationalShipService.cs" />
+    <Compile Include="Services\SummaryDataService.cs" />
     <Compile Include="Services\WarningMessageService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +185,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512291438425_initShips.resx">
       <DependentUpon>201512291438425_initShips.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512301357020_createDb.resx">
+      <DependentUpon>201512301357020_createDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512301402426_createDb1.resx">
+      <DependentUpon>201512301402426_createDb1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512301407550_createDb2.resx">
+      <DependentUpon>201512301407550_createDb2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512301413437_createDb3.resx">
+      <DependentUpon>201512301413437_createDb3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512301416310_GenerateLocations.resx">
+      <DependentUpon>201512301416310_GenerateLocations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
