--- a/MyThesis/Monitor/app/bower.json
+++ b/MyThesis/Monitor/app/bower.json
@@ -19,6 +19,10 @@
     "leaflet-providers": "~1.1.6",
     "leaflet-search": "~1.8.4",
     "leaflet-groupedlayercontrol": "~0.4.0",
-    "angular-sanitize": "~1.4.8"
+    "angular-sanitize": "~1.4.8",
+    "angular-ui-date": "~0.0.11",
+    "angular-timer": "~1.3.3",
+    "humanize-duration": "~3.4.0",
+    "moment": "momentjs#~2.10.6"
   }
 }
