--- a/MyThesis/packages/repositories.config
+++ b/MyThesis/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\ApiServer\packages.config" />
   <repository path="..\DownloadFile\packages.config" />
+  <repository path="..\InternationShipBuilder\packages.config" />
   <repository path="..\ServerApi\packages.config" />
 </repositories>
