improve waring messages

--- a/MyThesis/packages/repositories.config
+++ b/MyThesis/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\ApiServer\packages.config" />
   <repository path="..\DownloadFile\packages.config" />
+  <repository path="..\InternationalShipBuilder\packages.config" />
   <repository path="..\InternationShipBuilder\packages.config" />
   <repository path="..\ServerApi\packages.config" />
 </repositories>
