--- a/MyThesis/Monitor/app/bower.json
+++ b/MyThesis/Monitor/app/bower.json
@@ -23,6 +23,7 @@
     "angular-ui-date": "~0.0.11",
     "angular-timer": "~1.3.3",
     "humanize-duration": "~3.4.0",
-    "moment": "momentjs#~2.10.6"
+    "moment": "momentjs#~2.10.6",
+    "angular-ui-bootstrap-datetimepicker": "~0.14.0"
   }
 }
